Update to latest Gradle, Java LTS, and IntelliJ